Added a song history. Might work.